cortex/prometheus/prometheus-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: cortex-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - image: prom/prometheus:v2.30.3
        args:
          - --config.file=/etc/prometheus/config/prometheus-config.yml
          - --storage.tsdb.retention.time=2h
          - --storage.tsdb.path=/prometheus/data
          - --web.enable-lifecycle
          - --web.enable-admin-api
        imagePullPolicy: IfNotPresent
        name: prometheus
        ports:
        - containerPort: 9090
          protocol: TCP
        - containerPort: 19191
          protocol: TCP
        - containerPort: 19090
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/prometheus/config/
          name: prometheus-config
        - mountPath: /prometheus
          name: prometheus-claim
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            default-mode: 660
            items:
              - key: prometheus-config.yml
                path: prometheus-config.yml
            name: prometheus-config
          name: prometheus-config
        - persistentVolumeClaim:
            claimName: prometheus-claim
          name: prometheus-claim
