cortex/prometheus/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: cortex-test
spec:
  ports:
  - name: 9090-tcp
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
  sessionAffinity: None
  type: ClusterIP
